--- a/CMakeLists-WinCalc.txt.in
+++ b/CMakeLists-WinCalc.txt.in
@@ -3,7 +3,7 @@ cmake_minimum_required( VERSION 3.8 )
 include(ExternalProject)
 
 ExternalProject_Add(wincalc
-    GIT_REPOSITORY https://github.com/LBNL-ETA/WinCalc.git
+    GIT_REPOSITORY https://github.com/Fan-Feng/WinCalc.git
     GIT_TAG "v2.2.4" 
     
     UPDATE_COMMAND ""
